[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/GearChoice.gd" type="Script" id=1]
[ext_resource path="res://scenes/GearContainer.tscn" type="PackedScene" id=2]

[node name="GearChoice" type="MarginContainer" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1016.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -15
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="CurrentGear" parent="VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 2 )]

margin_left = 245.0
margin_top = 80.0
margin_right = 515.0
margin_bottom = 600.0
size_flags_horizontal = 10
size_flags_vertical = 10
_sections_unfolded = [ "Size Flags" ]

[node name="NewGear" parent="VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 2 )]

margin_left = 500.0
margin_top = 80.0
margin_right = 770.0
margin_bottom = 600.0
size_flags_horizontal = 2
size_flags_vertical = 10
_sections_unfolded = [ "Size Flags" ]

[node name="Tween" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="sacrifice" from="VBoxContainer/HBoxContainer/CurrentGear" to="." method="_on_CurrentGear_sacrifice"]

[connection signal="sacrifice" from="VBoxContainer/HBoxContainer/NewGear" to="." method="_on_NewGear_sacrifice"]


